--- a/config.py.example
+++ b/config.py.example
@@ -1,5 +1,5 @@
 # MQTT broker
-broker = "krypton.int.rainsbrook.co.uk"
+broker = "broker.example.com"
 
 # MQTT settings
 subscribe_topic = '/1stfloor/lights/relay1'
@@ -7,6 +7,6 @@ publish_topic = '/1stfloor/lights/relay1-status'
 brokerqos = 0
 
 # sr201 settings, 1st relay is no. 1, not 0.
-ipaddress = '192.168.1.91'
+ipaddress = '192.168.1.123'
 device_port = 6722
 relaynumber = '1'
